tests/baselines/reference/es6MemberScoping.errors.txt
tests/cases/compiler/es6MemberScoping.ts(7,21): error TS2304: Cannot find name 'store'.


==== tests/cases/compiler/es6MemberScoping.ts (1 errors) ====
    class Foo {
        constructor(store: string) { }
    
        public foo() {
            return this._store.length; 
        }
        public _store = store; // should be an error.
                        ~~~~~
!!! error TS2304: Cannot find name 'store'.
    }
    
    class Foo2 {
     
      static Foo2():number { return 0; } // should not be an error
     
    }
    